--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_FRONTEND_URL=localhost:3000
-NEXT_PUBLIC_BACKEND_URL=localhost:4000
-NEXT_PUBLIC_GRAPHQL_URL=localhost:4000/graphql
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:4000
+NEXT_PUBLIC_GRAPHQL_URL=http://localhost:4000/graphql
