📦 graphql codegenをインストール

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "dev": "run-p dev:*",
     "dev:next": "next dev",
     "dev:path": "pathpida --ignorePath .gitignore --output src/lib/pathpida --watch",
+    "dev:graphql": "yarn build:graphql --watch",
     "build": "run-s build:path build:next",
     "build:next": "next build",
     "build:path": "pathpida --ignorePath .gitignore --output src/lib/pathpida",
+    "build:graphql": "graphql-codegen --require dotenv/config --config ./codegen.ts",
     "start": "next start",
     "lint": "run-p lint:*",
     "lint:next": "next lint --dir src --ignore-path .prettierignore --max-warnings 0",
@@ -24,12 +26,19 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "graphql": "^16.6.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.12",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.4",
+    "@graphql-codegen/schema-ast": "^2.5.1",
+    "@graphql-codegen/typed-document-node": "^2.3.6",
+    "@graphql-codegen/typescript": "^2.8.1",
+    "@graphql-codegen/typescript-operations": "^2.5.6",
     "@tsconfig/strictest": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "pathpida": "^0.18.1",
