--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.12",
     "@graphql-codegen/gql-tag-operations-preset": "^1.7.0",
+    "@graphql-codegen/schema-ast": "^2.5.1",
     "@tsconfig/strictest": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "pathpida": "^0.18.1",
