--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4",
-    "urql": "^3.0.3"
+    "urql": "^3.0.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.12",
