--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,7 @@
     "typesafe-utils": "^1.16.2",
     "typescript": "4.8.4",
     "urql": "^3.0.3",
-    "zod": "^3.19.1"
+    "zod": "3.19.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.12",
