🔧 コマンドにdevを追加

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,9 @@
     "build": "nest build",
     "format": "prettier --write \"prisma/**/*.ts\" \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "dev": "run-p start:dev start:prisma-studio",
+    "start:prisma-studio": "prisma studio",
     "start:dev": "prisma generate && nest start --watch",
-    "start:debug": "prisma generate && nest start --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test,prisma}/**/*.ts\" --fix",
     "test": "jest",
