🔧 prisma generateに--watchフラグを追加

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,13 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"prisma/**/*.ts\" \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "dev": "run-p start:dev start:prisma-studio",
-    "start:prisma-studio": "prisma studio",
-    "start:dev": "prisma generate && nest start --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test,prisma}/**/*.ts\" --fix",
+    "start": "nest start",
+    "start:prod": "node dist/main",
+    "dev": "run-p watch:nest watch:prisma-generate watch:prisma-studio",
+    "watch:prisma-studio": "prisma studio",
+    "watch:prisma-generate": "prisma generate --watch",
+    "watch:nest": "nest start --watch",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
